
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_edit_item"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/caption_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/caption"
            android:textSize="12pt" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update" />

        </LinearLayout>

    </LinearLayout>
